# solanaizer-sample-project

./: .gitignore  Anchor.toml  Cargo.toml  README.md  ai_validator.py  gpt-response.txt  main.py  package.json  solanaizer.py  test.py  test.rs  vulnerability_types.py
.github/scripts/: ai_validator.py  formatOutput.js  hardcoded_vulnerability_checks.py  requirements.txt  solanaizer.py  test.py  utils.py
.github/workflows/: solana-audit.yml
exploits/: integer_overflow.rs  reetrancy_attack.rs  unsafe_memory.rs
migrations/: deploy.ts
programs/bug-free-contract-1/: Cargo.toml
programs/bug-free-contract-1/src/: lib.rs
programs/bug-free-contract-2/: Cargo.toml
programs/bug-free-contract-2/src/: lib.rs
programs/bug-free-contract-3/: Cargo.toml
programs/bug-free-contract-3/src/: lib.rs
programs/buggy-contract-1/: Cargo.toml
programs/buggy-contract-1/src/: lib.rs
programs/buggy-contract-2/: Cargo.toml
programs/buggy-contract-2/src/: lib.rs
programs/buggy-contract-3/: Cargo.toml
programs/buggy-contract-3/src/: lib.rs
programs/solanaizer-sample-project/: Cargo.toml
programs/solanaizer-sample-project/src/: lib.rs
scripts/: ai_validator.py
tests/: solanaizer-sample-project.ts
